# devcontainer_test

./: hello.py  pyproject.toml  ruff.toml  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml  postcommand.sh
src/: test.py
src/another_folder/: hello_2.py
src/new_sub/: __init__.py  test.py
