[build-system]
requires = ["setuptools>=61.0"]  # Or newer
build-backend = "setuptools.build_meta"

[project]
name = "ertest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.8.3",
]

[tool.uv]
package = true
